--- a/letter-markup/index.html
+++ b/letter-markup/index.html
@@ -35,7 +35,7 @@
         </style>
     </head>
     <body>
-        Dr. Eleanor Gaye
+<p>Dr. Eleanor Gaye</p>
 <p>Awesome Science faculty</p>
 <p>University of Awesome</p>
 <p>Bobtown, CA 99999,</p>
