--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         </style>
     </head>
     <body>
-        Dr. Eleanor Gaye
-Awesome Science faculty
+        <p>Dr. Eleanor Gaye</P>
+        <p>Awesome Science faculty</P>
 University of Awesome
 Bobtown, CA 99999,
 USA
