--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p>UK</P>
 
 
-        <p>Re: Eileen Dover university application</P>
+        <h1>Re: Eileen Dover university application</h1>
 
         <p>Dear Eileen,</P>
 
