--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
         </style>
     </head>
     <body>
-        <p>Dr. Eleanor Gaye</P>
+        <h3>Dr. Eleanor Gaye</h3>
         <p>Awesome Science faculty</P>
         <p>University of Awesome</P>
         <p>Bobtown, CA 99999,</P>
         <p>USA</P>
-        <p>Tel: 123-456-7890</P>
-        <p>Email: no_reply@example.com</P>
+        <p><h3>Tel</h3>: 123-456-7890</P>
+        <p><h3>Email</h3>: no_reply@example.com</P>
 
         <p>1/20/2016</P>
 
-        <p>Miss Eileen Dover</P>
+        <h3>Miss Eileen Dover</h3>
         <p>4321 Cliff Top Edge</P>
         <p>Dover, CT9 XXX</P>
         <p>UK</P>
@@ -57,7 +57,7 @@
 
         <p>Thank you for your recent application to join us at the University of Awesome's science faculty to study as part of your PhD next year. I will answer your questions one by one, in the following sections.</P>
 
-        <p>Starting dates</P>
+        <h2>Starting dates</h2>
 
         <p>We are happy to accommodate you starting your study with us at any time, however it would suit us better if you could start at the beginning of a semester; the start dates for each one are as follows:</P>
 
