--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p>University of Awesome</P>
         <p>Bobtown, CA 99999,</P>
         <p>USA</P>
-        <p><h3>Tel</h3>: 123-456-7890</P>
+        <h3>Tel</h3>: 123-456-7890
         <p><h3>Email</h3>: no_reply@example.com</P>
 
         <p>1/20/2016</P>
