--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>Bobtown, CA 99999,</P>
         <p>USA</P>
         <h3>Tel</h3>: 123-456-7890
-        <p><h3>Email</h3>: no_reply@example.com</P>
+        <h3>Email</h3>: no_reply@example.com
 
         <p>1/20/2016</P>
 
