--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <p>University of Awesome</P>
         <p>Bobtown, CA 99999,</P>
         <p>USA</P>
-        <h3>Tel</h3>: 123-456-7890
-        <h3>Email</h3>: no_reply@example.com
+        <p><strong>Tel</strong>: 123-456-7890</p>
+        <p><strong>Email</strong>: no_reply@example.com
 
         <p>1/20/2016</P>
 
@@ -61,27 +61,31 @@
 
         <p>We are happy to accommodate you starting your study with us at any time, however it would suit us better if you could start at the beginning of a semester; the start dates for each one are as follows:</P>
 
-        <p>2016 9/9/2016</P>
-        <p>2017 1/15/2017</P>
-        <p>5/2/2017</P>
+        <ul>
+            <li>2016 9/9/2016</li>
+            <li>2017 1/15/2017</li>
+            <li>5/2/2017</li>
+        </ul>
 
         <p>Please let me know if this is ok, and if so which start date you would prefer.</P>
 
-        <p>You can find more information about important university dates on our website.</P>
+        <p>You can find more information about <a href="http://example.com">important university dates</a> on our website.</P>
 
 
-        <p>Subjects of study</P>
+        <h2>Subjects of study</h2>
 
         <p>At the Awesome Science Faculty, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</P>
 
-        <p>Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)</P>
-        <p>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 103 increasing to 3 × 104.)</P>
-        <p>HTML and CSS constructs for representing musical scores.</P>
+        <ol>
+            <li>Turning H2O into wine, and the health benefits of Resveratrol (C14H12O3.)</li>
+            <li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 103 increasing to 3 × 104.)</li>
+            <li>HTML and CSS constructs for representing musical scores.</li>
+        </ol>
 
         <p>So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.</P>
 
 
-        <p>Exotic dance moves</P>
+        <h2>Exotic dance moves</h2>
 
         <p>Yes, you are right! As part of my post-doctorate work, I did study exotic tribal dances. To answer your question, my favourite dances are as follows, with definitions:</P>
 
@@ -92,9 +96,10 @@
         <p>Arctic robot dance</P>
         <p>An interesting example of historic misinformation, English explorers in the 1960s believed to have discovered a new dance style characterized by "robotic", stilted movements, being practiced by inhabitants of Northern Alaska and Canada. Later on however it was discovered that they were just moving like this because they were really cold.</P>
 
-        <p>For more of my research, see my exotic dance research page.</P>
+        <p>For more of my research, see my <a href="http://example.com">exotic dance research page</a>.</P>
 
         <p>Yours sincerely,</P>
+
         <p>Dr Eleanor Gaye</P>
 
         <p>University of Awesome motto: "Be awesome to each other." -- Bill S Preston, Esq</P>
