--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -36,7 +36,10 @@
                     <tr></tr>
                 </thead>
                 <tbody>
-                    <tr></tr>
+                    <tr>
+                        <td> testing cell 1 </td>
+                        <td> testing cell 2 </td>
+                    </tr>
                     <tr></tr>
                     <tr></tr>
                     <tr></tr>
