--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Gideon Moes">
-        
-<!-- Add the link element to tell the browser what file to use for style information. -->
-<link href="C:\Users\Ryzen5\Documents\GitHub\mastermoes1.github.io\css\style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css" media=”screen” />
         
         <title>Wanted | Jame Markus</title>
     </head>
