--- a/index.html
+++ b/index.html
@@ -1,88 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Gideon Moes">
-        <title>Franzen Irony University</title>
-        <link href="C:\Users\Ryzen5\Documents\GitHub\mastermoes1.github.io\css\style.css" rel="stylesheet">
-        <!-- Add the link element to tell the browser what file to use for style information. -->
-    
-    </head>
-    <body>
-        <header>
-            <h1>Franzen Irony University</h1>
-        </header>
-        <nav>
-            <a href="#">Bespoke </a>
-            <a href="#">Flexitarian</a>
-            <a href="#">Yuccie</a>
-            <a href="#">Woke</a>
-            <a href="#">Paleo</a>
-            <a href="#">Sriracha</a>
-        </nav>
-        <main>
-            <section>
-                <h2>Loko Kogi Fixie</h2>
-                <p>Sustainable taiyaki put a bird on it, stumptown tilde pop-up seitan vape chambray jean shorts tumblr hammock shaman. Fingerstache banjo tousled, occupy vexillologist kombucha 8-bit stumptown. 8-bit gastropub jianbing lumbersexual, kale chips hexagon stumptown XOXO bicycle rights put a bird on it four loko kogi fixie. Chartreuse yuccie chambray brooklyn prism 
-                    <a href="https://en.wikipedia.org/wiki/Kombucha">Kombucha</a>,
-                    <a href="https://en.wikipedia.org/wiki/Chicharr%C3%B3n">Chicharrón</a>,
-                    <a href="https://en.wikipedia.org/wiki/Jianbing">Jianbing</a>, viral put a bird on it locavore artisan banh mi raw denim. Put a bird on it farm-to-table food truck hammock <a href="https://en.wikipedia.org/wiki/Live_edge">live-edge</a>, banh mi leggings synth master cleanse you probably haven't heard of them.</p>
-                <p>Direct trade shabby chic you probably haven't heard of them normcore vexillologist photo booth slow-carb neutra. Hell of chicharrones succulents mustache tumeric normcore. Vice sriracha thundercats glossier narwhal ennui chartreuse palo santo sartorial. </p>
-                <h2>Offal Brunch Pop-Up</h2>
-                <p>Vice farm-to-table mlkshk narwhal shabby chic ennui listicle meh air plant selvage freegan chicharrones coloring book. Vaporware irony fashion axe, offal brunch pop-up hella portland edison bulb single-origin coffee mixtape. Actually try-hard celiac, occupy pour-over direct trade iPhone slow-carb squid wolf kombucha plaid DIY tumeric:</p>
-                <ul class="long-list">
-                    <li>DIY fashion</li>
-                    <li>YOLO salvia</li>
-                    <li>Copper mug</li>
-                    <li>Tilde poutine</li>
-                </ul>
-                <p>Occupy pour-over direct trade iPhone slow-carb squid wolf kombucha plaid:</p>
-                <ol>
-                    <li><a href="#">On it migas</a> for more information</li>
-                    <li><a href="#">Mixtape gochujang</a>, freegan intelligentsia flannel selfies</li>
-                    <li><a href="#">Street art unicorn</a>!</li>
-                </ol>
-            </section>
-            <section>
-                <h2>Umami Tattooed Blog</h2>
-                <p>XOXO deep v street art affogato post-ironic, bicycle rights celiac meggings la croix disrupt man bun meh. Banh mi direct trade marfa vice. Organic copper mug viral meggings. Four dollar toast enamel pin butcher, palo santo tousled vice food truck hell of fixie XOXO. Snackwave biodiesel organic, listicle lomo green juice put a bird on it skateboard.</p>
-                <figure>
-                    <img src="images/grad.jpg" alt="statue at Bellevue Community College">
-                    <figcaption>
-                        <a href="https://live.staticflickr.com/4353/35532378753_9a112d3ef6_c.jpg">!!!</a> by <a href="https://www.flickr.com/photos/shari-thompson/">Shari Thompson</a> licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/legalcode">BY-NC-SA 2.0</a>
-                    </figcaption>
-                </figure>
-                <ul class="long-list">
-                    <li><a href="#">Listicle Tilde </a></li>
-                    <li><a href="#">Locavore</a></li>
-                    <li><a href="#">Vinyl Echo</a></li>
-                    <li><a href="#">Prism Raclette</a></li>
-                    <li><a href="#">Stumptown</a></li>
-                    <li><a href="#">Next Level Raw</a></li>
-                    <li><a href="#">Cold-Pressed</a></li>
-                    <li><a href="#">Bicycle Rights</a></li>
-                    <li><a href="#">Dollar Toast</a></li>
-                    <li><a href="#">Chillwave</a></li>
-                    <li><a href="#">Prism Raclette</a></li>
-                    <li><a href="#">Taxidermy</a></li>
-                    <li><a href="#">Food Truck</a></li>
-                    <li><a href="#">Shaman</a></li>
-                    <li><a href="#">Bushwick</a></li>
-                    <li><a href="#">Craft Beer</a></li>
-                    <li><a href="#">Tousled</a></li>
-                    <li><a href="#">Chicharrones</a></li>
-                    <li><a href="#">8-Bit Cleanse</a></li>
-                    <li><a href="#">Affogato</a></li>
-                    <li><a href="#">YOLO Beard</a></li>
-                    <li><a href="#">Palo Santo</a></li>
-                    <li><a href="#">Four Loko V</a></li>
-                    <li><a href="#">Wolf Moon 90's</a></li>
-                </ul>
-            </section>
-        </main>
-        <footer>
-            <p>&copy; 2019 Franzen Irony University</p>
-        </footer>
-    </body>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Layout Task</title>
+  <link href="styles.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+
+  <div class="logo">
+    International Taco Day is Here!
+  </div>
+
+  <nav>
+    <ul>
+      <li>
+        <a href="">Home</a>
+      </li>
+      <li>
+        <a href="">Soecial Media</a>
+      </li>
+      <li>
+        <a href="">About us</a>
+      </li>
+      <li>
+        <a href="">Support us</a>
+      </li>
+      <li>
+        <a href="">Contacts</a>
+      </li>
+    </ul>
+  </nav>
+
+  <main class="grid">
+    <article>
+      <h1>
+        Internation Taco Day brings world-wide discounts!
+      </h1>
+      <img src="images/taco-6.jpg" alt="placeholder" class="feature">
+      <p>Pug venmo helvetica truffaut drinking vinegar, street art la croix jean shorts banjo etsy trust fund try-hard irony aesthetic.
+      Butcher stumptown poutine pok pok copper mug street art vinyl iceland edison bulb shabby chic listicle. Chillwave pitchfork readymade
+      cloud bread authentic hammock everyday carry subway tile butcher thundercats. Kitsch small batch pour-over truffaut. Live-edge everyday
+      carry hashtag cardigan tumblr vinyl neutra unicorn 8-bit, artisan pinterest mumblecore brooklyn. Food truck craft beer mumblecore you probably
+      haven't heard of them asymmetrical godard +1 roof party raw denim trust fund hoodie. Vexillologist taxidermy forage tumeric, chillwave vinyl
+      aesthetic gentrify chia.</p>
+
+      <p>Pickled gluten-free roof party, flexitarian gochujang knausgaard brunch poutine asymmetrical. Small batch mumblecore swag blog 90's selfies
+      chambray godard echo park celiac bitters tumblr. Vaporware gastropub before they sold out, hashtag semiotics tbh church-key iceland franzen
+      selvage gochujang taxidermy narwhal chartreuse gentrify. Bespoke vice you probably haven't heard of them offal unicorn chartreuse. Poke pug
+      iceland pickled man bun try-hard kale chips tofu next level meditation meh. Beard messenger bag letterpress synth ugh helvetica small batch yes
+      plz literally palo santo brunch chia green juice woke. Authentic 90's actually vice tacos vinyl vape cornhole gentrify artisan sartorial fashion
+      axe.</p>
+
+      <p>Lumbersexual pop-up pickled bicycle rights chartreuse. Kinfolk vexillologist gastropub twee chia poutine sustainable palo santo gochujang schlitz
+      yuccie artisan lo-fi. Cred quinoa bicycle rights flexitarian pug, ramps health goth raw denim lomo XOXO. Meggings tofu disrupt lo-fi meh.</p>
+
+      <p>Polaroid small batch butcher mustache neutra ennui prism fanny pack unicorn cornhole copper mug street art. IPhone mustache hoodie scenester
+      flannel franzen, hexagon post-ironic tote bag shoreditch skateboard knausgaard keytar. Cloud bread salvia live-edge brooklyn semiotics ennui +1
+      intelligentsia enamel pin bushwick. Before they sold out artisan pickled narwhal man braid palo santo trust fund, cold-pressed brunch chambray sustainable
+      woke pop-up mumblecore. Brunch hexagon raclette 3 wolf moon vexillologist. Pop-up pitchfork man braid, tonx biodiesel vape quinoa roof party try-hard narwhal
+      paleo jean shorts messenger bag keffiyeh. Meh snackwave sriracha organic jianbing celiac, godard selvage la croix vexillologist meggings put a bird on it.</p>
+
+      <p>Affogato activated charcoal hella man braid, vegan taxidermy raclette kale chips butcher lumbersexual yes plz. Sustainable fixie kogi artisan echo park
+      meggings succulents +1 copper mug vaporware mustache hot chicken listicle migas shaman. Plaid occupy woke tote bag small batch cliche. Air plant palo santo meh
+      you probably haven't heard of them hexagon intelligentsia migas messenger bag. Paleo whatever jianbing, yr drinking vinegar leggings unicorn sustainable cold-pressed
+      meditation church-key tonx food truck. Bushwick leggings lo-fi tumeric ethical keytar yuccie typewriter cred poke literally. Tote bag waistcoat tattooed, prism chambray
+      man bun lo-fi next level.</p>
+
+    </article>
+
+    <aside>
+      <h2>
+        See great deals below!
+      </h2>
+      <ul class="photos">
+        <li>
+          <img src="images/taco-1.jpg" alt="placeholder">
+        </li>
+        <li>
+          <img src="images/taco-2.jpg" alt="placeholder">
+        </li>
+        <li>
+          <img src="images/taco-3.jpg" alt="placeholder">
+        </li>
+        <li>
+          <img src="images/taco-4.jpg" alt="placeholder">
+        </li>
+        <li>
+          <img src="images/taco-5.jpg" alt="placeholder">
+        </li>
+      </ul>
+
+    </aside>
+  </main>
+
+</body>
+
 </html>
